<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="danggai.app.parcelwhere.ui.track.add.TrackAddViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/f1"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_carriers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                android:paddingHorizontal="18dp"
                viewModel="@{vm}"
                items="@{vm.lvCarrierList}"
                isChanged="@{vm.lvItemSetChanged}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/cl_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <View style="@style/LinearDivider" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/EditText.MatchWrap"
                    android:id="@+id/et_item_name"
                    android:paddingVertical="10dp"
                    android:text="@={vm.lvItemName}"
                    android:textSize="18sp"
                    android:textColor="@color/c1"
                    android:textColorHint="@color/f3"
                    android:hint="@string/item_name"
                    android:background="@color/f1" />

                <View style="@style/LinearDivider.20dp" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/EditText.MatchWrap"
                    android:id="@+id/et_track_id"
                    android:paddingVertical="10dp"
                    android:text="@={vm.lvTrackId}"
                    android:textSize="18sp"
                    android:textColor="@color/c1"
                    android:textColorHint="@color/f3"
                    android:hint="@string/track_id"
                    android:background="@color/f1" />

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/EditText.MatchWrap"
                    app:mrl_rippleOverlay="true"
                    app:mrl_rippleDuration="250" >

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/EditText.MatchWrap"
                        android:id="@+id/btn_search"
                        android:paddingVertical="10dp"
                        android:text="@string/track_add"
                        android:textSize="20sp"
                        android:textColor="@color/f1"
                        android:background="@color/c1"
                        android:onClick="@{(v)->vm.onClick(v)}"  />

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/b6"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone"
            android:clickable="false"
            >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/c1"
                android:id="@+id/progress1" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>