...

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextView.MatchMatch"
                        android:id="@+id/tv_confirm"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:text="@string/confirm"
                        android:textSize="18sp"
                        android:textColor="@color/f1"
                        android:gravity="center"
                        android:background="@color/c1"
                        />

...
