...
            app:layout_constraintBottom_toTopOf="@id/adView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_add_24"
                android:backgroundTint="@color/c1"
                android:onClick="@{(v) -> vm.onClick(v)}"
                app:layout_anchor="@id/btm_appbar"
...
                        android:src="@drawable/baseline_settings_24"
                        android:onClick="@{(v) -> vm.onClick(v)}"
                        android:contentDescription="@string/desc_setting"
                        />

                    <ImageView
                        android:id="@+id/btn_tutorial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        app:tint="@color/f1"
                        android:background="?attr/selectableItemBackgroundBorderless"
...
