<resources>
    <string name="app_name">택배ㅇㄷ?</string>

    <string name="carrier_name">이름</string>
    <string name="item_name">상품 이름</string>
    <string name="track_id">운송장 번호</string>
    <string name="track_add">운송장 추가</string>
    <string name="now_status">현재 상태</string>
    <string name="time">시간</string>
    <string name="recent_time">최근 조회 시간</string>
    <string name="location">위치</string>
    <string name="description">상세 설명</string>

    <string name="item_name_empty">상품명</string>
    <string name="now_location_empty">현재 위치</string>
    <string name="now_status_empty">배송 상태</string>
    <string name="recent_time_empty">최근 갱신 시간</string>

    <string name="auto_register">자동 등록</string>
    <string name="notification_access">알림으로 운송장 자동 등록</string>
    <string name="receive_noti">운송장 자동 등록 시 알림 수신</string>
    <string name="notification_catch_fail">앱이 알림을 인식하지 못하나요?</string>

    <string name="auto_refresh">자동 새로고침</string>
    <string name="parcel_auto_refresh">운송장 자동 새로고침</string>
    <string name="parcel_refresh_receive_noti">운송장 새로고침 시 알림 수신</string>
    <string name="auto_refresh_period">자동 새로고침 주기</string>


    <string name="app_info">앱 정보</string>

    <string name="push_title_new">신규 운송장 추가</string>
    <string name="push_title_exist">운송장 갱신</string>


    <!--    다이얼로그    -->
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="denied">거부</string>
    <string name="next">다음</string>
    <string name="dialog_submit">저장</string>
    <string name="dialog_cancel">취소</string>

    <string name="hint_dialog">다이얼로그 내용 입력</string>

    <string name="dialog_name_change_title">운송장 이름 변경</string>
    <string name="dialog_name_change_msg">저장을 누르시면 상품의 이름을 아래와 같이 변경해요.</string>
    <string name="dialog_name_change_toast_done">변경되었어요.</string>
    <string name="dialog_name_change_toast_fail">변경에 실패했어요.</string>

    <string name="dialog_forcibly_add_parcel">%s\n이런 문제는 일반적으로 이런 이유로 발생해요.\n\n%s\n\n그래도 물건을 등록할까요?</string>
    <string name="dialog_forcibly_delete_parcel">%s\n이런 문제는 일반적으로 이런 이유로 발생해요.\n\n%s\n\n잘못 등록 된 택배라면, 이 택배를 삭제할까요?</string>

    <string name="dialog_noti_permission_allow_first">앱이 알림 영역에 접근할 수 있으면 운송장번호를 자동으로 등록할 수 있어요.\n허용하려면 아래 확인 버튼을 눌러주세요.\n\n앱은 절대 운송장 외의 정보에 접근하거나 정보를 기기 밖으로 전달하지 않아요.</string>
    <string name="dialog_noti_permission_allow">운송장을 자동으로 등록하기 위해 앱이 알림에 접근할 수 있도록 권한을 허용해주세요.\n\n앱은 절대 운송장 외의 정보에 접근하거나 정보를 기기 밖으로 전달하지 않아요.</string>
    <string name="dialog_noti_permission_reject">위와 같은 팝업이 나오면, 앱의 알림 접근 권한을 허용 안 됨으로 조정해 주세요.\n\n이후, 앱은 더 이상 운송장 번호를 자동으로 등록하지 않아요.</string>
    <string name="dialog_noti_when_auto_register_allow">운송장이 자동으로 등록 될 때, 알림으로 안내드려요.</string>
    <string name="dialog_noti_when_auto_register_reject">운송장이 자동으로 등록 될 때, 더 이상 알림으로 안내드리지 않아요.</string>
    <string name="dialog_noti_when_parcel_refresh_allow">운송장이 새로고침 될 때, 알림으로 안내드려요.</string>
    <string name="dialog_noti_when_parcel_refresh_reject">운송장이 새로고침 될 때, 더 이상 알림으로 안내드리지 않아요.</string>
    <string name="dialog_start_noti_fail_form">알림에 택배사 이름과, 운송장 번호가 있어야지 앱이 알림을 인식 할 수 있어요.\n\n그럼에도 인식하지 못한다면, 인식하지 못하는 알림메세지를 개발자에게 전달해서 함께 앱을 개선할 수 있어요.\n\n개발자에게 알림을 공유하시겠어요?</string>


    <!--    메세지    -->
    <string name="error">[%d] %s</string>

    <string name="msg_track_id_empty">운송장 번호를 입력해 주세요.</string>
    <string name="msg_carrier_empty">조회 하실 택배사를 선택해 주세요.</string>
    <string name="msg_percel_not_exist_error">유효하지 않은 운송장 번호에요.</string>
    <string name="msg_carrier_network_error">서버 문제로 택배사와 통신할 수 없어요.</string>
    <string name="msg_network_error">네트워크 오류가 발생했어요.</string>
    <string name="msg_refresh_error">%s(%s)를 새로고침 하지 못했어요.</string>
    <string name="msg_copy_complete">%s 을 복사했어요.</string>
    <string name="msg_copy_complete_temp">운송장 번호가 복사됐어요.</string>
    <string name="msg_track_list_empty">저장된 운송장 번호가 없어요.</string>
    <string name="msg_progress_list_loading">운송 정보를 가져오고 있어요.</string>
    <string name="msg_progress_list_empty">아직 택배사에서 택배를 수령하지 않았어요.</string>

    <string name="msg_tutorial_1">여기에선 운송장 정보를 직접 입력해서 수동으로 추가할 수 있어요.</string>
    <string name="msg_tutorial_2">여기에선 앱이 알림으로 운송장을 등록할지, 자동으로 새로고침 할 지 설정할 수 있어요.</string>
    <string name="msg_tutorial_3">여기에는 내 운송장들의 정보가 나열되어 있어요.</string>

    <string name="toast_back_button">한 번 더 눌러서 앱을 종료해요.</string>
    <string name="toast_parcel_delete_done">운송장 번호를 삭제했어요.</string>

    <string name="error_reason_404">1. 택배사가 물품 배송을 시작하기 전\n2. 잘못 된 운송장 번호</string>
    <string name="error_reason_500">1. 일시적인 서버 오류</string>


    <!--    ContentDescription    -->
    <string name="desc_tutorial">앱 사용 방법에 대한 간단한 안내를 확인할 수 있어요.</string>
    <string name="desc_setting">앱 설정을 변경 할 수 있어요.</string>
    <string name="desc_parcel_add">운송장을 추가할 수 있는 화면으로 이동할 수 있어요.</string>
    <string name="desc_noti_permission">기기가 수신하는 알림을 분석하여 운송장을 자동으로 등록할 수 있게 허용해요. 이 기능을 사용하기 위해서는 관련 권한을 허용해야 해요.</string>
    <string name="desc_noti_get">운송장이 알림을 통해 자동으로 등록 될 때 알림을 수신할 지 여부를 정할 수 있어요.</string>
    <string name="desc_noti_fail">인식하지 못하는 알림이 있으면 해당 정보를 개발자에게 공유하여 인식할 수 있도록 앱을 개선할 수 있어요.</string>
    <string name="desc_auto_refresh">운송장을 일정 시간마다 자동으로 새로고침 할 지 여부를 설정할 수 있어요.</string>
    <string name="desc_parcel_refresh_receive_noti">운송장 자동 새로고침 시 알림을 수신할 지 여부를 설정할 수 있어요.</string>


    <!-- Google Ads -->
    <string name="google_ads_app_id">ca-app-pub-8407462596213276~2658827782</string>
    <string name="google_ads_banner_id">ca-app-pub-8407462596213276/5807605420</string>

    <string name="google_ads_test_banner_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>